--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -6,16 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="8.5.1" />
-    <PackageReference Include="MediatR" Version="7.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.1" />
     <PackageReference Include="Nudes.SeedMaster" Version="0.3.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.0.0-rc4" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUi" Version="5.0.0-rc4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\Seeder\" />
   </ItemGroup>
 
   <ItemGroup>
